# ShiggyGameCore

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  add_bom.js
examples/: CMakeLists.txt  allocator_demo.cpp  behavior_tree.cpp  config_manager.cpp  coroutine_demo.cpp  ecs_basic.cpp  event_system.cpp  game_loop.cpp  math_showcase.cpp  object_pool.cpp  physics_sim.cpp  profiler_demo.cpp  raycast_demo.cpp  scene_transition.cpp  serialize_roundtrip.cpp  service_locator_demo.cpp  spatial_query.cpp  state_machine.cpp  tween_animation.cpp
examples/dxlib_shooting/: Main.cpp
examples/siv3d_samples/: KeyCodes.hpp  Main.cpp  MenuScene.hpp  SampleActionMap.hpp  SampleBehaviorTree.hpp  SampleCamera.hpp  SampleCommand.hpp  SampleConfig.hpp  SampleCoroutine.hpp  SampleDebugOverlay.hpp  SampleDialogUI.hpp  SampleDraggableWindow.hpp  SampleECS.hpp  SampleEventSystem.hpp  SampleFade.hpp  SampleFixedTimestep.hpp  SampleGlossaryPanel.hpp  SampleGrid.hpp  SampleHudLayout.hpp  SampleInputCombo.hpp  SampleInputMode.hpp  SampleInventoryUI.hpp  SampleLogger.hpp  SampleMath.hpp  SampleMemory.hpp  SampleMessageChannel.hpp  SampleNoise.hpp  SampleObjectPool.hpp  SampleObserver.hpp  SampleOctree.hpp  SamplePanelStack.hpp  SampleParticle.hpp  SamplePendingAction.hpp  SamplePhysics.hpp  SampleQuadtree.hpp  SampleRaycast.hpp  SampleScrollList.hpp  SampleServiceLocator.hpp  SampleSettingsScreen.hpp  SampleSpeechBubble.hpp  (+12 more)
examples/siv3d_shooting/: BulletSystem.hpp  CMakeLists.txt  CleanupSystem.hpp  CollisionSystem.hpp  Components.hpp  EnemySpawnSystem.hpp  Events.hpp  GameEffects.hpp  GameScene.hpp  InputSystem.hpp  KeyCodes.hpp  Main.cpp  MovementSystem.hpp  RenderSystem.hpp  ResultScene.hpp  SharedData.hpp  TitleScene.hpp
tests/: CMakeLists.txt  TestCore.cpp
tests/ai/: TestAStar.cpp  TestBehaviorTree.cpp  TestFlocking.cpp  TestGOAP.cpp  TestSteering.cpp  TestUtilityAI.cpp
tests/animation/: TestAnimationStateMachine.cpp  TestTween.cpp  TestTweenCallbacks.cpp  TestTweenTimeline.cpp
tests/asset/: TestAssetHandle.cpp  TestAssetManager.cpp  TestAssetPipeline.cpp  TestSpriteSheet.cpp
tests/audio/: TestAudioBus.cpp  TestAudioBusGraph.cpp  TestAudioPlayer.cpp  TestAudioStream.cpp  TestSpatialAudio.cpp  TestSpatialAudio3D.cpp  TestWaveGenerator.cpp
tests/bench/: BenchmarkECS.cpp  BenchmarkMath.cpp
tests/config/: TestConfigManager.cpp
tests/containers/: TestBitSet.cpp  TestFreeList.cpp  TestPriorityQueue.cpp  TestSparseSet.cpp  TestSpatialHashMap.cpp
tests/core/: TestAssert.cpp  TestCoroutine.cpp  TestFlags.cpp  TestHandle.cpp  TestHash.cpp  TestISerializer.cpp  TestLogger.cpp  TestProfiler.cpp  TestRandom.cpp  TestRingBuffer.cpp  TestScopeGuard.cpp  TestSerialize.cpp  TestStringUtils.cpp  TestThreadPool.cpp  TestTimer.cpp  TestTypeId.cpp
tests/data/: TestBinarySerializer.cpp  TestDataNode.cpp  TestJsonConfig.cpp  TestSceneSerializer.cpp
tests/debug/: TestDebugDraw.cpp  TestDebugOverlay.cpp  TestFpsCounter.cpp  TestFrameGraph.cpp  TestMemoryStats.cpp  TestTweakable.cpp
tests/dialogue/: TestDialogueBuilder.cpp  TestDialogueSystem.cpp
tests/dxlib/: TestDxLibAudioPlayer.cpp  TestDxLibGamepadProvider.cpp  TestDxLibInputProvider.cpp  TestDxLibRenderer.cpp  TestDxLibRenderer3D.cpp  TestDxLibSceneAdapter.cpp  TestDxLibTextMeasure.cpp  TestDxLibTextRenderer.cpp  TestDxLibTypeConvert.cpp
tests/ecs/: TestCommandBuffer.cpp  TestECS.cpp  TestEntityTemplate.cpp  TestMessageBus.cpp  TestSystem.cpp  TestSystemTraits.cpp  TestViewExclude.cpp
tests/effects/: TestAffectorPresets.cpp  TestEmitterShape.cpp  TestParticlePool.cpp  TestParticleSystem.cpp
tests/graphics/: TestCamera2D.cpp  TestRenderer.cpp  TestSpriteRenderer.cpp  TestTextMeasure.cpp  TestTextRenderer.cpp
tests/graphics3d/: TestCamera3D.cpp  TestMaterial.cpp  TestMaterialSystem.cpp  TestMeshFactory.cpp  TestRenderPipeline3D.cpp  TestRenderer3D.cpp  TestShadowMap.cpp  TestSkybox.cpp
tests/i18n/: TestDateTimeFormat.cpp  TestLanguageManager.cpp  TestPluralRules.cpp  TestStringTable.cpp  TestTextDirection.cpp
tests/imgui/: TestImGuiAdapter.cpp
tests/input/: TestActionMap.cpp  TestGamepadProvider.cpp  TestInputBuffer.cpp  TestInputModeManager.cpp  TestInputProvider.cpp  TestModeAwareInput.cpp
tests/math/: TestBezier.cpp  TestEasing.cpp  TestExpressionTree.cpp  TestFrustum.cpp  TestGeometry.cpp  TestInterpolation.cpp  TestIntersection.cpp  TestMat3.cpp  TestMat4.cpp  TestMathConstants.cpp  TestMathParser.cpp  TestNodeGraph.cpp  TestNoise.cpp  TestPlane.cpp  TestQuaternion.cpp  TestRay3.cpp  TestRect.cpp  TestSimdVec.cpp  TestSpline.cpp  TestVec2.cpp  TestVec3.cpp  TestVec4.cpp  TestVectorOps.cpp
tests/memory/: TestArenaAllocator.cpp  TestFreeListAllocator.cpp  TestPoolAllocator.cpp  TestStackAllocator.cpp  TestStlAllocatorAdapter.cpp
tests/net/: TestMessageChannel.cpp  TestStateSync.cpp
tests/network/: TestNetworkCodec.cpp  TestNetworkEntity.cpp  TestPredictionBuffer.cpp  TestTransport.cpp
tests/patterns/: TestCommand.cpp  TestDecorator.cpp  TestEventDispatcher.cpp  TestFactory.cpp  TestObjectPool.cpp  TestObserver.cpp  TestServiceLocator.cpp  TestStateMachine.cpp  TestStrategy.cpp
tests/physics/: TestAABB2DCollision.cpp  TestCollisionFilter.cpp  TestCollisionResponse.cpp  TestCollisionShape3D.cpp  TestCollisionUtils.cpp  TestConstraints.cpp  TestFixedTimestep.cpp  TestForceField.cpp  TestPhysics2D.cpp  TestPhysicsWorld.cpp  TestPhysicsWorld3D.cpp  TestRayCast2D.cpp  TestRayCast3D.cpp  TestRigidBody2D.cpp  TestRigidBody3D.cpp
tests/platformer/: TestCameraFollow.cpp  TestPlatformerPhysics.cpp  TestTileCollider.cpp
tests/procedural/: TestDungeonGenerator.cpp  TestLSystem.cpp  TestTerrainGenerator.cpp  TestWFC.cpp
tests/replay/: TestReplaySystem.cpp
tests/resource/: TestAssetLoader.cpp  TestAsyncLoadBatch.cpp  TestAsyncLoader.cpp  TestFileWatcher.cpp  TestHotReloader.cpp  TestResourceManager.cpp
tests/roguelike/: TestDungeonLayout.cpp  TestInventory.cpp  TestTurnManager.cpp
tests/save/: TestSaveFormat.cpp  TestSaveMigration.cpp  (+1 more)
(+356 files in other folders)
